# gtkmdeditor

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  test.md  test_with_images.md
examples/: Makefile  test.md  testeditor.c  testeditor.rs  testviewer.c  testviewer.rs  testwidget.rs
src/: lib.rs  parser.rs  tags.rs
src/editor/: imp.rs
src/ffi/: editor.rs  gtkmdeditor.h  gtkmdviewer.h  mod.rs  viewer.rs
src/viewer/: imp.rs  mod.rs
src/widgets/: imp.rs  mod.rs
