[package]
name = "gtkmdeditor"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15"
gtk4 = { version = "0.10", features = [ "v4_12" ]}
libc = "0.2"
ctor = "0.2"
adw = { version = "0.8", package = "libadwaita", features = ["v1_6"], optional = true }

[features]
default = [ "adw" ]
adw = [ "dep:adw" ]

[lib]
crate-type = ["lib", "cdylib"]

[[example]]
name = "testeditor"

[[example]]
name = "testviewer"
